--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,7 +7,12 @@
 </ion-header>
 
 <ion-content style="overflow: hidden">
-  <div id='mapid' ></div>
+  
+  <div id='mapid' >
+    <div class="buttoniniciar">
+      <ion-button  expand="block" (click)="onClick()">Iniciar Viaje</ion-button>
+    </div>
+  </div>
 
 
 </ion-content>
