--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -4,3 +4,12 @@
     height: 100% !important;
     background-color: #f6f6f6;
 }
+
+.buttoniniciar{
+    position: absolute;
+    pointer-events: none;
+    z-index: 2;
+    top: 90%;
+    left: 0%;
+    width: 100%;
+}
