--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -5,5 +5,30 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content></ion-content>
+<ion-content>
+    <ion-list>
+       
+        <ion-item>
+          <ion-button >
+                Mis Viajes          
+          </ion-button>      
+        </ion-item>
+        <ion-item>
+          <ion-button>
+            Mis pagos
+          </ion-button>      
+        </ion-item>
+        <ion-item>
+          <ion-button >
+            Click me
+          </ion-button>      
+        </ion-item>
+        <ion-item>
+            <ion-button color="danger" i->
+              Salir
+            </ion-button>      
+          </ion-item>
+     
+    </ion-list>
+  
+  </ion-content>
