esqueleto de rest

--- a/src/app/Login/register/register.page.html
+++ b/src/app/Login/register/register.page.html
@@ -6,7 +6,7 @@
 
 
   <ion-content  color="primary">
-    <form  #form="ngForm" (ngSubmit)="log(form)">
+    <form  #form="ngForm" (ngSubmit)="registrar(form)">
       <ion-grid>
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
