--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+      <ion-title>
       MI PERFIL
     </ion-title>
   </ion-toolbar>
@@ -8,6 +8,14 @@
 
 <ion-content>
   <ion-list>
+    <ion-item>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-subtitle>Usuario urudin</ion-card-subtitle>
+          <ion-card-title></ion-card-title>
+        </ion-card-header>
+      </ion-card>
+    </ion-item>
       <ion-item>
           <ion-label >            
               Dinero en el monedero: poner *ngif que si tengo menos de x , me ponga un mensaje
