--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,7 +12,25 @@
     <div class="buttoniniciar">
       <ion-button  expand="block" (click)="onClick()">Iniciar Viaje</ion-button>
     </div>
+    <div id="divInfo"  style=" position: relative;height: 40%; border-color: black; display: none">
+      <ion-card>
+          <ion-card-header>
+            <ion-card-subtitle id="infoscooter">Info Scooter</ion-card-subtitle>
+            <ion-card-title id="idscooter">ID : </ion-card-title>
+          </ion-card-header>
+        
+          <ion-card-content>
+          Descripcion , Serial bla bla
+          </ion-card-content>
+      </ion-card>
+      <div>
+          <ion-button  expand="block">Iniciar</ion-button>
+          <ion-button (click)="volver()" expand="block">Cancelar</ion-button>
+      </div>
+    </div>  
   </div>
+
+  
 
 
 </ion-content>
