--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,13 +10,14 @@
   
   <div id='mapid' >
     <div class="buttoniniciar">
-      <ion-button  expand="block" (click)="onClick()">Iniciar Viaje</ion-button>
+      <ion-button  expand="block" (click)="abrirQR()">Iniciar Viaje</ion-button>
     </div>
     <div id="divInfo"  style=" position: relative;height: 40%; border-color: black; display: none">
       <ion-card>
-          <ion-card-header>
-            <ion-card-subtitle id="infoscooter">Info Scooter</ion-card-subtitle>
-            <ion-card-title id="idscooter">ID : </ion-card-title>
+          <ion-card-header >
+            <ion-card-subtitle id="infoscooter">subtitulo</ion-card-subtitle>
+            <ion-card-title id="idscooter">ID :</ion-card-title>
+            <ion-card-content></ion-card-content>
           </ion-card-header>
         
           <ion-card-content>
