--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
       <ion-card style="width: 100%" >
         <ion-card-header>
           <ion-card-subtitle>Usuario urudin</ion-card-subtitle>
-          <ion-card-title id="divuser">{{userme.email}}</ion-card-title>
+          <ion-card-title *ngIf="userme" id="divuser">{{userme.email}}</ion-card-title>
         </ion-card-header>
       </ion-card>
     </ion-item>
@@ -20,7 +20,7 @@
         <ion-card style="width: 100%" >
           <ion-card-header>
             <ion-card-subtitle>Dinero acreditado:</ion-card-subtitle>
-            <ion-card-title >{{userme.saldo}}</ion-card-title>
+            <ion-card-title  *ngIf="userme">{{userme.saldo}}</ion-card-title>
           </ion-card-header>
         </ion-card> 
       </ion-item>
