--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,8 +15,8 @@
     <div id="divInfo"  style=" position: relative;height: 40%; border-color: black; display: none">
       <ion-card>
           <ion-card-header >
-            <ion-card-subtitle id="infoscooter">subtitulo</ion-card-subtitle>
-            <ion-card-title id="idscooter">ID :</ion-card-title>
+            <ion-card-subtitle *ngIf="scooterinfo" >ID: {{scooterinfo.id}}</ion-card-subtitle>
+            <ion-card-title *ngIf="scooterinfo" >Serial number: {{scooterinfo.numeroserial}}</ion-card-title>
             <ion-card-content></ion-card-content>
           </ion-card-header>
         
