--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -25,7 +25,7 @@
           </ion-card-content>
       </ion-card>
       <div>
-          <ion-button  expand="block">Iniciar</ion-button>
+          <ion-button  (click)="iniciarViaje()" expand="block">Iniciar</ion-button>
           <ion-button (click)="volver()" expand="block">Cancelar</ion-button>
       </div>
     </div>  
