--- a/src/app/miperfil/billetera/billetera.page.html
+++ b/src/app/miperfil/billetera/billetera.page.html
@@ -13,7 +13,7 @@
   <ion-card>
     <ion-card-header>Dinero disponible </ion-card-header>
       <ion-card-content>
-          <ion-card-title>$xx</ion-card-title>
+          <ion-card-title *ngIf="userme">$ {{userme.saldo}}</ion-card-title>
       </ion-card-content>
  
   </ion-card>
@@ -28,7 +28,7 @@
       <ion-card>
           <ion-card-header>Ingrese el monto a cargar </ion-card-header>
             <ion-card-content>
-                <ion-input type="number" placeholder="Monto"></ion-input>
+                <ion-input id="monto" type="number" placeholder="Monto"></ion-input>
                 <!-- TODO:Establece minimo y maximo-->
                 <ion-button (click)="cargarmonto()">Cargar</ion-button>
                 <ion-button (click)="cancelar()">Cancelar</ion-button>
