--- a/src/app/miperfil/billetera/billetera.page.html
+++ b/src/app/miperfil/billetera/billetera.page.html
@@ -28,7 +28,7 @@
       <ion-card>
           <ion-card-header>Ingrese el monto a cargar </ion-card-header>
             <ion-card-content>
-                <ion-input id="monto" type="number" placeholder="Monto"></ion-input>
+                <ion-input [(ngModel)]="monto" type="number" placeholder="Monto"></ion-input>
                 <!-- TODO:Establece minimo y maximo-->
                 <ion-button (click)="cargarmonto()">Cargar</ion-button>
                 <ion-button (click)="cancelar()">Cancelar</ion-button>
