--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-card style="width: 100%" >
+      <ion-card style="width: 100%; background-color: lightgreen">
         <ion-card-header>
           <ion-card-subtitle>Usuario urudin</ion-card-subtitle>
           <ion-card-title *ngIf="userme" id="divuser">{{userme.email}}</ion-card-title>
