--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="overflow: hidden">
+<ion-content class="noscroll">
   
   <div id='mapid' >
     <div class="buttoniniciar">
