--- a/src/app/miperfil/billetera/billetera.page.html
+++ b/src/app/miperfil/billetera/billetera.page.html
@@ -13,7 +13,7 @@
   <ion-card>
     <ion-card-header>Dinero disponible </ion-card-header>
       <ion-card-content>
-          <ion-card-title *ngIf="userme">$ {{userme.saldo}}</ion-card-title>
+          <ion-card-title *ngIf="userme">USD {{userme.saldo}}</ion-card-title>
       </ion-card-content>
  
   </ion-card>
