--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -27,8 +27,10 @@
       <div>
           <ion-button  (click)="iniciarViaje()" expand="block">Iniciar</ion-button>
           <ion-button (click)="volver()" expand="block">Cancelar</ion-button>
+          <ion-button  expand="block">FINALIZAR VIAJE</ion-button>
       </div>
     </div>  
+    
   </div>
 
   
