--- a/src/app/Login/register/register.page.html
+++ b/src/app/Login/register/register.page.html
@@ -1,34 +1,31 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>REGISTRO URUDIN</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content color="dark">
+  <ion-card color="primary">
+    <ion-card-header>
+      <ion-card-title>¡Registrate!</ion-card-title>
+    </ion-card-header>
+  </ion-card>
 
-
-  <ion-content  color="primary">
-    <form  #form="ngForm" (ngSubmit)="registrar(form)">
+  <ion-card color="light">
+    <ion-card-content color="light">
       <ion-grid>
-        <ion-row color="primary" justify-content-center>
-          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-            <div text-center>
-              <h3>Crea tu cuenta para usar nuestros Scooters</h3>
-            </div>
-            <div padding>
-              <ion-item>
-                <ion-input  name="nombre" type="text" placeholder="Nombre" ngModel required></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-input name="apellido" type="text" placeholder="Apellido" ngModel required></ion-input>
-              </ion-item>
-            </div>
-            <div padding>
-              <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Registrar</ion-button>
-            </div>
-          </ion-col>
-        </ion-row>
+        <form #form="ngForm" (ngSubmit)="registrar(form)">
+          <ion-row color="primary" justify-content-center>
+            <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+              <div padding>
+                <ion-input color=primary name="nombre" type="text" placeholder="Ingresa tu nombre" ngModel required>
+                </ion-input>
+                <ion-input color=primary name="apellido" type="text" placeholder="Ingresa tu apellido" ngModel required>
+                </ion-input>
+                <ion-input color=primary name="email" type="email" placeholder="Ingresa tu correo" ngModel required>
+                </ion-input>
+              </div>
+              <div padding>
+                <ion-button color=primary size="default" type="submit" [disabled]="form.invalid" expand="block">Registrarse</ion-button>
+              </div>
+            </ion-col>
+          </ion-row>
+        </form>
       </ion-grid>
-    </form>
-  </ion-content>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
