--- a/src/app/Login/register/register.page.html
+++ b/src/app/Login/register/register.page.html
@@ -8,19 +8,19 @@
   <ion-card color="light">
     <ion-card-content color="light">
       <ion-grid>
-        <form #form="ngForm" (ngSubmit)="registrar(form)">
+        <form #form="ngForm">
           <ion-row color="primary" justify-content-center>
             <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
               <div padding>
-                <ion-input color=primary name="nombre" type="text" placeholder="Ingresa tu nombre" ngModel required>
+                <ion-input color=primary name="nombre" type="text" placeholder="Ingresa tu nombre" [(ngModel)]="user.nombre" required>
                 </ion-input>
-                <ion-input color=primary name="apellido" type="text" placeholder="Ingresa tu apellido" ngModel required>
+                <ion-input color=primary name="apellido" type="text" placeholder="Ingresa tu apellido" [(ngModel)]="user.apellido" required>
                 </ion-input>
-                <ion-input color=primary name="email" type="email" placeholder="Ingresa tu correo" ngModel required>
+                <ion-input color=primary name="email" type="email" placeholder="Ingresa tu correo" [(ngModel)]="user.email" required>
                 </ion-input>
               </div>
               <div padding>
-                <ion-button color=primary size="default" type="submit" [disabled]="form.invalid" expand="block">Registrarse</ion-button>
+                <ion-button color=primary size="default" [disabled]="form.invalid" expand="block" (click)="register()">Registrarse</ion-button>
               </div>
             </ion-col>
           </ion-row>
