--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,6 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
+ion-toolbar{
+    text-align: center;
+}
+ion-item{
+    cursor:pointer;
 }
