--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,56 +1,43 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-title>
-      MI PERFIL
+  <ion-toolbar color=primary>
+    <ion-title>
+      Mi perfil
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
+  <ion-card color="primary">
+    <ion-card-header style="text-align: center">
+      <ion-card-title *ngIf="userme">{{userme.nombre}} {{userme.apellido}}</ion-card-title>
+      <ion-card-subtitle *ngIf="userme">{{userme.email}}</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
+  <ion-card>
+    <ion-card-header color="danger" *ngIf="userme.saldo <= 100">
+      <ion-card-subtitle>Dinero acreditado:</ion-card-subtitle>
+      <ion-card-title *ngIf="userme">{{userme.saldo}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-header color="success" *ngIf="userme.saldo > 100">
+      <ion-card-subtitle>Dinero acreditado:</ion-card-subtitle>
+      <ion-card-title *ngIf="userme">{{userme.saldo}}</ion-card-title>
+    </ion-card-header>
+  </ion-card>
   <ion-list>
     <ion-item>
-      <ion-card style="width: 100%; background-color: lightgreen">
-        <ion-card-header>
-          <ion-card-subtitle>Usuario urudin</ion-card-subtitle>
-          <ion-card-title *ngIf="userme" id="divuser">{{userme.email}}</ion-card-title>
-        </ion-card-header>
-        <ion-card-header>
-          <ion-card-subtitle>Nombre y Apellido</ion-card-subtitle>
-          <ion-card-title *ngIf="userme" id="divuser">{{userme.nombre}} {{userme.apellido}}</ion-card-title>
-        </ion-card-header>
-      </ion-card>
+      <ion-label (click)="redirect2()">
+        Cargar dinero
+      </ion-label>
     </ion-item>
-      <ion-item>
-        <ion-card style="width: 100%" >
-          <ion-card-header>
-            <ion-card-subtitle>Dinero acreditado:</ion-card-subtitle>
-            <ion-card-title  *ngIf="userme">{{userme.saldo}}</ion-card-title>
-          </ion-card-header>
-        </ion-card> 
-      </ion-item>
-      <ion-item>
-        <ion-button (click)="redirect1()">
-          Modificar mis datos personales
-        </ion-button>      
-      </ion-item>
-      <ion-item>
-        <ion-button (click)="redirect2()">
-          Cargar dinero en Monedero Digital
-        </ion-button>      
-      </ion-item>
-      <ion-item>
-        <ion-button >
-          Click me
-        </ion-button>      
-      </ion-item>
-      <ion-item>
-          <ion-button (click)="exit()" color="danger" i->
-            Salir
-          </ion-button>      
-        </ion-item>
-   
+    <ion-item>
+      <ion-label (click)="exit()" color="danger" i->
+        Salir
+      </ion-label>
+    </ion-item>
+
   </ion-list>
-
+  <ion-fab color="primary" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="redirect1()">
+      <ion-icon name="settings"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
-
-
