--- a/src/app/miperfil/billetera/billetera.page.html
+++ b/src/app/miperfil/billetera/billetera.page.html
@@ -1,40 +1,38 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
-        </ion-buttons>
-    <ion-title>MI monedero</ion-title>
+  <ion-toolbar color=primary>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Mi monedero</ion-title>
   </ion-toolbar>
 </ion-header>
-
-
 
 <ion-content>
   <ion-card>
     <ion-card-header>Dinero disponible </ion-card-header>
-      <ion-card-content>
-          <ion-card-title *ngIf="userme">USD {{userme.saldo}}</ion-card-title>
-      </ion-card-content>
- 
+    <ion-card-content>
+      <ion-card-title *ngIf="userme">USD {{userme.saldo}}</ion-card-title>
+    </ion-card-content>
   </ion-card>
   <ion-card>
     <ion-card-header>Desea cargar dinero en su monedero?</ion-card-header>
-      <ion-card-content>
-         <ion-button (click)="activardiv()">Cargar Dinero</ion-button>
-      </ion-card-content>
- 
-  </ion-card>
-  <div id="divoculto" style="display: none" >
-      <ion-card>
-          <ion-card-header>Ingrese el monto a cargar </ion-card-header>
-            <ion-card-content>
-                <ion-input [(ngModel)]="monto" type="number" placeholder="Monto"></ion-input>
-                <!-- TODO:Establece minimo y maximo-->
-                <ion-button (click)="cargarmonto()">Cargar</ion-button>
-                <ion-button (click)="cancelar()">Cancelar</ion-button>
+    <ion-card-content>
+      <ion-button (click)="activardiv()">Cargar Dinero</ion-button>
+    </ion-card-content>
 
-            </ion-card-content>
-       
-        </ion-card>
-   </div>
+  </ion-card>
+  <div id="divoculto" style="display: none">
+    <ion-card>
+      <ion-card-header>Ingrese el monto a cargar </ion-card-header>
+      <ion-card-content>
+        <ion-input [(ngModel)]="monto" type="number" placeholder="Monto"></ion-input>
+        <!-- TODO:Establece minimo y maximo-->
+        <ion-button color="danger" (click)="cancelar()" expand="block">Cancelar</ion-button>
+        <ion-button color="success" (click)="cargarmonto()" expand="block">Cargar</ion-button>
+        
+
+      </ion-card-content>
+
+    </ion-card>
+  </div>
 </ion-content>
