--- a/src/app/miperfil/misdatos/misdatos.page.html
+++ b/src/app/miperfil/misdatos/misdatos.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color=primary>
       <ion-buttons slot="start">
           <ion-back-button></ion-back-button>
         </ion-buttons>
-    <ion-title>misdatos</ion-title>
+    <ion-title>Mis datos</ion-title>
   </ion-toolbar>
 </ion-header>
 
