--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,39 +1,32 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      MAPA URUDIN.
+      Scooters
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content class="noscroll">
-  
-  <div id='mapid' >
+  <div id='mapid'>
     <div class="buttoniniciar">
-      <ion-button  expand="block" (click)="abrirQR()">Iniciar Viaje</ion-button>
+      <ion-button expand="block" (click)="abrirQR()">Iniciar Viaje</ion-button>
     </div>
-    <div id="divInfo"  style=" position: relative;height: 40%; border-color: black; display: none">
+    <div id="divInfo" style=" position: relative;height: 40%; border-color: black; display: none">
       <ion-card>
-          <ion-card-header >
-            <ion-card-subtitle *ngIf="scooterinfo" >ID: {{scooterinfo.id}}</ion-card-subtitle>
-            <ion-card-title *ngIf="scooterinfo" >Serial number: {{scooterinfo.numeroserial}}</ion-card-title>
-            <ion-card-content></ion-card-content>
-          </ion-card-header>
-        
-          <ion-card-content>
+        <ion-card-header>
+          <ion-card-subtitle *ngIf="scooterinfo">ID: {{scooterinfo.id}}</ion-card-subtitle>
+          <ion-card-title *ngIf="scooterinfo">Serial number: {{scooterinfo.numeroserial}}</ion-card-title>
+          <ion-card-content></ion-card-content>
+        </ion-card-header>
+
+        <ion-card-content>
           Descripcion , Serial bla bla
-          </ion-card-content>
+        </ion-card-content>
       </ion-card>
       <div>
-          <ion-button  (click)="iniciarViaje()" expand="block">Iniciar</ion-button>
-          <ion-button (click)="volver()" expand="block">Cancelar</ion-button>
-          <ion-button  expand="block">FINALIZAR VIAJE</ion-button>
+        <ion-button (click)="iniciarViaje()" expand="block">Iniciar</ion-button>
+        <ion-button (click)="volver()" expand="block">Cancelar</ion-button>
+        <ion-button expand="block">FINALIZAR VIAJE</ion-button>
       </div>
-    </div>  
-    
+    </div>
   </div>
-
-  
-
-
 </ion-content>
