--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,4 +1,6 @@
-
+ion-toolbar{
+    text-align: center;
+}
 .noscroll{
     overflow: hidden;
 }
@@ -17,4 +19,5 @@
     top: 90%;
     left: 0%;
     width: 100%;
+    height: 0;
 }
