--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,34 +1,21 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="primary">
     <ion-title>
-      OTRAS OPCIONES
+      Opciones
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-    <ion-list>
-       
+    <ion-list>       
         <ion-item>
-          <ion-button >
+          <ion-label>
                 Mis Viajes          
-          </ion-button>      
+          </ion-label>      
         </ion-item>
         <ion-item>
-          <ion-button>
+          <ion-label>
             Mis pagos
-          </ion-button>      
-        </ion-item>
-        <ion-item>
-          <ion-button >
-            Click me
-          </ion-button>      
-        </ion-item>
-        <ion-item>
-            <ion-button color="danger" i->
-              Salir
-            </ion-button>      
-          </ion-item>
-     
-    </ion-list>
-  
+          </ion-label>      
+        </ion-item>     
+    </ion-list>  
   </ion-content>
