--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,6 +22,16 @@
       </ion-label>
     </ion-item>
     <ion-item>
+      <ion-label>
+        Mis Viajes
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        Mis pagos
+      </ion-label>
+    </ion-item>
+    <ion-item>
       <ion-label (click)="exit()" color="danger" i->
         Salir
       </ion-label>
