--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,21 +18,31 @@
   <ion-list>
     <ion-item>
       <ion-label (click)="redirect2()">
-        Cargar dinero
+        <ion-icon name="logo-usd"></ion-icon>
+        Acreditar dinero
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label>
-        Mis Viajes
+        <ion-icon name="navigate"></ion-icon>
+         Viajes
+      </ion-label>
+    </ion-item>
+    <ion-item >
+      <ion-label>
+        <ion-icon name="swap"></ion-icon>
+        Mis Pagos
       </ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>
-        Mis pagos
+      <ion-label (click)="notificacion()">
+        <ion-icon name="notifications"></ion-icon>
+        Notificaciones
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label (click)="exit()" color="danger" i->
+        <ion-icon name="power"></ion-icon>
         Salir
       </ion-label>
     </ion-item>
