--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar class="primary">
     <ion-title>
-      Opciones
+      Menú opciones
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
     <ion-list>       
         <ion-item>
           <ion-label>
-                Mis Viajes          
+           Mis Viajes          
           </ion-label>      
         </ion-item>
         <ion-item>
