--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,15 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="person"></ion-icon>
-      <ion-label>Perfil</ion-label>
+      <ion-icon name="reorder"></ion-icon>
+      <ion-label>Menú</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="navigate"></ion-icon>
-      <ion-label>Pasea</ion-label>
+      <ion-label>Scooters</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="reorder"></ion-icon>
-      <ion-label>Opciones</ion-label>
-    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
