--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,7 +23,7 @@
       </ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>
+      <ion-label (click)="misviajes()">
         <ion-icon name="navigate"></ion-icon>
          Viajes
       </ion-label>
