--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,7 +29,7 @@
       </ion-label>
     </ion-item>
     <ion-item >
-      <ion-label>
+      <ion-label (click)="mispagos()">
         <ion-icon name="swap"></ion-icon>
         Mis Pagos
       </ion-label>
