--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,7 +25,7 @@
     <ion-item>
       <ion-label (click)="misviajes()">
         <ion-icon name="navigate"></ion-icon>
-         Viajes
+        Mis Viajes
       </ion-label>
     </ion-item>
     <ion-item >
