--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-content class="noscroll">
   <div id='mapid'>
-    <div id="divInfo" style=" position: relative;height: 40%; border-color: black; display: none">
+    <div id="divInfo" style=" position: relative;height: 40%; border-color: black; "><!-- display:none -->
       <ion-card>
         <ion-card-header>
           <ion-card-subtitle *ngIf="scooterinfo">ID: {{scooterinfo.id}}</ion-card-subtitle>
