--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,13 @@
 <ion-content class="noscroll">
-  <div id='mapid'>
-    <div id="divInfo" style=" position: relative;height: 40%; border-color: black; "><!-- display:none -->
+  <div id='mapid' *ngIf="!datosQR">
+  </div>
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed" *ngIf="!datosQR">
+    <ion-fab-button (click)="abrirQR()">
+        <ion-icon name="expand"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <div *ngIf="datosQR" id="divInfo" >
       <ion-card>
         <ion-card-header>
           <ion-card-subtitle *ngIf="scooterinfo">ID: {{scooterinfo.id}}</ion-card-subtitle>
@@ -13,15 +20,10 @@
         </ion-card-content>
       </ion-card>
       <div>
-        <ion-button (click)="iniciarViaje()" expand="block">Iniciar</ion-button>
-        <ion-button (click)="volver()" expand="block">Cancelar</ion-button>
-        <ion-button expand="block">FINALIZAR VIAJE</ion-button>
+        <ion-button (click)="iniciarViaje()"  *ngIf="!enViaje"  expand="block">Iniciar viaje</ion-button>
+        <ion-button (click)="volver()" expand="block" *ngIf="!enViaje">Volver</ion-button>
+        <ion-button (click)="finalizarviaje()" expand="block" *ngIf="enViaje" >Finalizar viaje</ion-button>
       </div>
     </div>
-  </div>
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button (click)="abrirQR()">
-        <ion-icon name="expand"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+
 </ion-content>
