--- a/src/app/miperfil/billetera/billetera.page.html
+++ b/src/app/miperfil/billetera/billetera.page.html
@@ -11,7 +11,7 @@
   <ion-card>
     <ion-card-header>Dinero disponible </ion-card-header>
     <ion-card-content>
-      <ion-card-title *ngIf="userme">USD {{userme.saldo}}</ion-card-title>
+      <ion-card-title *ngIf="userme">U$ {{userme.saldo}}</ion-card-title>
     </ion-card-content>
   </ion-card>
   <ion-card>
