--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,7 +19,7 @@
     <ion-item>
       <ion-label (click)="redirect2()">
         <ion-icon name="logo-usd"></ion-icon>
-        Acreditar dinero
+        Monedero
       </ion-label>
     </ion-item>
     <ion-item>
